Reworked one page with mdx.

--- a/src/sites/md/06-4-javascript-ascii.mdx
+++ b/src/sites/md/06-4-javascript-ascii.mdx
@@ -1,9 +1,10 @@
 import {Section} from "../../components/MarkdownComponents.jsx"
 import Example from "../../components/Example.jsx"
+import Chapter from "../../components/Chapter.jsx"
 
 
 
-
+<Chapter>
 ## ASCII-Codes in Javascript
 
 <Section>
@@ -80,3 +81,5 @@ console.log(result)
 
 Am Ende ist `result` der sortierte Text.
 </Example>
+
+</Chapter>
