--- a/src/sites/md/06-5-javascript-switches.mdx
+++ b/src/sites/md/06-5-javascript-switches.mdx
@@ -1,17 +1,13 @@
-import {Section} from "../../components/MarkdownComponents.jsx"
 import Example from "../../components/Example.jsx"
 import Chapter from "../../components/Chapter.jsx"
-
 
 <Chapter>
 
 ## Schalter in Javascript
 
-<Section>
-Schalter sind verschiedene Fälle die in Javascript auftretten können.
-Mit Schalter, oder auch Switches genannt, können wir die Logik im Code
-recht einfach steuern.
-</Section>
+Schalter sind verschiedene Fälle die in Javascript auftretten können. Mit
+Schalter, oder auch Switches genannt, können wir die Logik im Code recht einfach
+steuern.
 
 <Example title="Beispiel: In 2 Listen aufteilen">
 Oftmals kann es sein das Sie einen Text in 2 Teile unterteilen möchten,
@@ -21,7 +17,7 @@ in einen ersten Teil lesen, und alles dannach in einen zweiten Teil,
 dann können wir das mit Switches machen.
 
 ```javascript
-const text = 'das ist im ersten Teil|und das hier im zweiten'
+const text = "das ist im ersten Teil|und das hier im zweiten"
 let switchFirst = true
 const listFirst = []
 const listSecond = []
@@ -39,7 +35,8 @@ for (let i = 0; i < text.length; i++) {
 const result = [listFirst.join(""), listSecond.join("")]
 ```
 
-Solange wir nur 2 Fälle haben, ist der Code sehr einfach. Mit mehr
-Fällen kann es komplexer werden, aber nicht unbedingt schwieriger.
+Solange wir nur 2 Fälle haben, ist der Code sehr einfach. Mit mehr Fällen kann
+es komplexer werden, aber nicht unbedingt schwieriger.
+
 </Example>
 </Chapter>
