--- a/src/sites/md/06-4-javascript-ascii.mdx
+++ b/src/sites/md/06-4-javascript-ascii.mdx
@@ -1,60 +1,52 @@
-import {Section} from "../../components/MarkdownComponents.jsx"
 import Example from "../../components/Example.jsx"
 import Chapter from "../../components/Chapter.jsx"
-
-
 
 <Chapter>
 ## ASCII-Codes in Javascript
 
-<Section>
-Der ASCII-Code ist ein Code der jedem Zeichen eine Zahl zuweist. Das
-braucht der Cumputer da er wissen muss welches Zeichen er darstellen
-soll, denn der Computer kann selber nur mit Zahlen umgehen.
-</Section>
+Der ASCII-Code ist ein Code der jedem Zeichen eine Zahl zuweist. Das braucht der
+Cumputer da er wissen muss welches Zeichen er darstellen soll, denn der Computer
+kann selber nur mit Zahlen umgehen.
 
-<Section>
-In dieser Tabelle ist festgehalten welche Zahl im ASCII-Code welchem
-Zeichen entspricht:
+In dieser Tabelle ist festgehalten welche Zahl im ASCII-Code welchem Zeichen
+entspricht:
 
 <div style={{ textAlign: "center" }}>
-    <img
+  <img
     src="https://www.asciitable.com/asciifull.gif"
     alt="ascii-table"
     style={{ width: "min(100%, 860px)" }}
-    />
+  />
 </div>
 
-In dieser Tabelle können wir zum Beispiel ablesen dass alle Buchstaben
-am Stück vorkommen. Es ist also einfach zu prüfen ob es sich um einen
-Kleinbuchstaben handelt.
-</Section>
+In dieser Tabelle können wir zum Beispiel ablesen dass alle Buchstaben am Stück
+vorkommen. Es ist also einfach zu prüfen ob es sich um einen Kleinbuchstaben
+handelt.
 
 <Example title="Beispiel: Kleinbuchstaben erkennen">
 Wenn wir einen Kleinbuchstaben erkennen möchten, können wir einfach
 überprüfen ob dessen ASCII-Wert in einem bestimmten Bereich liegt.
 
 ```javascript
-const singleCharacter = 'd'
+const singleCharacter = "d"
 const ascii = singleCharacter.charCodeAt(0)
 if (97 <= ascii && ascii <= 122) {
-    console.log("Es ist ein Kleinbuchstabe.")
+  console.log("Es ist ein Kleinbuchstabe.")
 } else {
-    console.log("Es ist sicher kein Kleinbuchstabe.")
+  console.log("Es ist sicher kein Kleinbuchstabe.")
 }
 ```
 
-Wir könnten nun noch weitere Fälle einbauen, um komplexere Überprüfungen
-zu erstellen.
+Wir könnten nun noch weitere Fälle einbauen, um komplexere Überprüfungen zu
+erstellen.
+
 </Example>
 
-<Section>
-
 ### Sortieren mit dem ASCII-Code
-Wenn Sie die Tabelle genau anschauen, dann sehen Sie das die Buchstaben
-im ASCII-Code bereits schön sortiert sind. Das macht es sehr praktisch
-wenn wir einen vergleichsbasierten Sortieralgorithmus schreiben möchten.
-</Section>
+
+Wenn Sie die Tabelle genau anschauen, dann sehen Sie das die Buchstaben im
+ASCII-Code bereits schön sortiert sind. Das macht es sehr praktisch wenn wir
+einen vergleichsbasierten Sortieralgorithmus schreiben möchten.
 
 <Example title="Beispiel: Text sortieren">
 Wenn wir einen einfachen Text sortieren möchten, können wir das mithilfe
@@ -63,14 +55,14 @@ Grossbuchstaben sortiert.
 
 ```javascript
 const text = "Bitte sortiere mich!"
-const list = text.split("")  // Damit wandeln wir den Text in eine Liste um, das brauchen wir wenn wir Elemente vertauschen möchten.
+const list = text.split("") // Damit wandeln wir den Text in eine Liste um, das brauchen wir wenn wir Elemente vertauschen möchten.
 for (let i = 0; i < list.length - 1; i++) {
   const currentElement = list[i]
-  const nextElement = list[i+1]
-  if ( currentElement.charCodeAt(0) > nextElement.charCodeAt(0)) {
+  const nextElement = list[i + 1]
+  if (currentElement.charCodeAt(0) > nextElement.charCodeAt(0)) {
     // Reihenfolge stimmt nicht, Elemente müssen getauscht werden.
-    const tmp = list[i+1]
-    list[i+1] = list[i]
+    const tmp = list[i + 1]
+    list[i + 1] = list[i]
     list[i] = tmp
     i = -1 // starte von vorne wenn etwas vertauscht wurde.
   }
@@ -80,6 +72,7 @@ console.log(result)
 ```
 
 Am Ende ist `result` der sortierte Text.
+
 </Example>
 
 </Chapter>
