Use md-features.

--- a/src/sites/md/05-0-javascript.mdx
+++ b/src/sites/md/05-0-javascript.mdx
@@ -35,8 +35,9 @@ Damit können wir den Code in der Datei `script.js` in der Webseite verwenden.
 
 <section>
 
-<b>Funktionen</b> sind die Basisbausteine für ein Programm. In Javascript werden
-Funktionen zur Verfügung gestellt, die dann von der Webseite aufgerufen werden können.
+**Funktionen** sind die Basisbausteine für ein Programm. In Javascript werden
+Funktionen zur Verfügung gestellt, die dann von der Webseite aufgerufen werden
+können.
 
 Funktionen können auch von anderen Funktionen aufgerufen werden, dadurch kann
 man Code einmal schreiben, und mehrfach verwenden.
