Space between presentations.

--- a/src/sites/md/07-0-ai-intro.mdx
+++ b/src/sites/md/07-0-ai-intro.mdx
@@ -1,5 +1,6 @@
 import Chapter from "../../components/Chapter"
 import Example from "../../components/Example"
+import VSpace from "../../components/VSpace"
 import Presentation, {
   Slide,
   Basement,
@@ -21,6 +22,8 @@ hat keine Garantie auf Korrektheit.
 
 Wir können die KI dennoch nutzen um uns zu helfen, wir sollten uns dabei einfach
 an einige Grundregeln halten.
+
+<VSpace space="2rem" />
 
 <Presentation>
   <Slide>
@@ -125,9 +128,13 @@ replace-Methode verwenden.
 
 </Presentation>
 
+<VSpace space="2rem" />
+
 Wir wissen nun also das wir die KI nutzen können und auch sollen, die Frage ist
 jetzt nur noch wie wir diesen Prozess möglichst einfach und effizient für uns
 machen.
+
+<VSpace space="2rem" />
 
 <Presentation>
   <Slide>
