Add new bodies with mouseclick.

--- a/src/sites/md/07-0-ai-intro.mdx
+++ b/src/sites/md/07-0-ai-intro.mdx
@@ -13,6 +13,8 @@ import Matter from "../../components/Matter"
 
 ## Arbeiten mit KI
 
+<Matter />
+
 Seit der Erfindung von LLMs (Large Language Models) sind viele Aufgaben in der
 Schule deutlich einfacher geworden. Man kann gewisse Hausaufgaben sehr einfach
 von einer KI schreiben lassen, oder sogar ganze Aufsätze von einer KI erstellen
