Added remotion and matter.

--- a/src/sites/md/07-0-ai-intro.mdx
+++ b/src/sites/md/07-0-ai-intro.mdx
@@ -8,6 +8,8 @@ import Presentation, {
 } from "../../components/Reveal"
 
 import Matter from "../../components/Matter"
+import RPlayer from "../../components/Remotion"
+import Outro from "../../components/videos/Outro"
 
 <Chapter>
 
@@ -30,6 +32,14 @@ an einige Grundregeln halten.
 <VSpace space="2rem" />
 
 <Presentation>
+<Slide>
+<Basement>
+<h1>Awesome Animations</h1>
+</Basement>
+<Basement>
+<RPlayer videoComponent={Outro} />
+</Basement>
+</Slide>
 <Slide>
 <h2>KI als Assistent</h2>
 <Basement>
