Added Pong as example.

--- a/src/sites/md/07-0-ai-intro.mdx
+++ b/src/sites/md/07-0-ai-intro.mdx
@@ -140,19 +140,29 @@ console.log(textWithoutE);
 
 <VSpace space="2rem" />
 
+<section>
+
 Wir wissen nun also das wir die KI nutzen können und auch sollen, die Frage ist
 jetzt nur noch wie wir diesen Prozess möglichst einfach und effizient für uns
 machen.
 
-<VSpace space="2rem" />
+Am besten geht es wenn wir die KI direkt in unserem Editor nutzen können. Dafür
+gibt es eine praktische Extension in VS Code - **Codeium**. Um Codeium zu
+installieren können Sie einfach `CTRL + P` drücken und den folgenden Code
+eingeben:
 
-<Presentation>
-  <Slide>
-    <h1>Codeium</h1>
-  </Slide>
-  <Slide>
-    <h2>KI-Assisent direkt im Editor</h2>
-  </Slide>
-</Presentation>
+```text
+ext install Codeium.codeium
+```
+
+Sie müssen dann die Extension noch aktivieren und dabei einen Account bei
+Codeium erstellen. Wenn Sie damit fertig sind, bekommen Sie in Ihrem Editor
+direkt Vorschläge für Ihren Code.
+
+Denken Sie daran das es extrem wichtig ist der Experte für das Projekt zu
+bleiben. Sie sollten also nur Änderungen von der KI annehmen die Sie auch
+wirklich verstehen.
+
+</section>
 
 </Chapter>
