--- a/src/sites/md/07-1-ai-pong.mdx
+++ b/src/sites/md/07-1-ai-pong.mdx
@@ -258,4 +258,22 @@ Sie verbessern möchten.
 
 </Example>
 
+### Alles direkt erstellen lassen
+
+<section>
+
+Bei so einem einfachen Spiel wie Pong, können Sie den kompletten Code auch
+direkt erstellen lassen. Versuchen Sie das einmal indem Sie eine neue Datei
+`pong.html` erstellen, und dann mit `Codeium: Command` eine Prompt eingeben, die
+Ihnen das ganze Spiel erstellt. Schauen Sie sich den Code dannach gut an.
+Könnten Sie in dem Code noch gut Änderungen einbringen?
+
+Wenn Sie KI als Werkzeug einsetzen, dann sollten Sie immer wissen was Sie machen
+möchten. Das geht am besten wenn Sie nur kleine Stücke Code erstellen lassen,
+und diese so lange anpassen, bis der Code das macht was Sie gerne möchten. Das
+kann schnell komplex werden, je nachdem wie viele Interaktionen die
+verschiedenen Codestücke haben.
+
+</section>
+
 </Chapter>
