--- a/src/sites/md/07-1-ai-pong.mdx
+++ b/src/sites/md/07-1-ai-pong.mdx
@@ -96,7 +96,7 @@ Wir können also ganz oben in der Datei folgenden Kommentar hinterlassen, und un
 den Code generieren lassen.
 
 ```javascript
-// Erstelle eine Spiel-Objekt Ball in der Mitte des Spielfelds
+// Erstelle ein Spiel-Objekt Ball in der Mitte des Spielfelds
 ```
 
 Mit `Tab` können wir den Vorschlag von der KI akzeptieren. Wenn wir mit der Maus
@@ -191,7 +191,7 @@ lassen. Wir gehen wieder ganz oben in die Datei, direkt nach dem `Ball`. Dort
 können wir den folgenden Kommentar einfügen:
 
 ```javascript
-// Erstele ein Spielerobjekt auf der rechten Seite
+// Erstelle ein Spielerobjekt auf der rechten Seite
 ```
 
 Das sollte uns auf der rechten Seite des Spielfelds einen Balken geben. Wir
