Added notes on binary code.

--- a/src/sites/md/08-2-javascript-binary-data.mdx
+++ b/src/sites/md/08-2-javascript-binary-data.mdx
@@ -2,6 +2,8 @@ import Chapter from "../../components/Chapter"
 import Example from "../../components/Example"
 import VSpace from "../../components/VSpace"
 
+import HexCell from "../../components/HexCell"
+
 <Chapter>
 
 ## Binäre Daten
@@ -14,11 +16,56 @@ import VSpace from "../../components/VSpace"
         kompliziert und auch unübersichtlich, dafür sind dann weitere
         Datenformate und Programmiersprachen erfunden worden.
 
-        Sie hatten indirekt schon mit dem Binärformat zu tun, als wir uns den
-        ASCII-Code beschäftigt haben. Wir haben dort einfach nicht die
+        Sie hatten indirekt schon mit dem Binärformat zu tun, als wir uns mit
+        dem ASCII-Code beschäftigt haben. Wir haben dort einfach nicht die
         Binärdarstellung angeschaut, sondern die Dezimaldarstellung.
 
 </section>
+    
+    <Example title="Beispiel: ASCII-Code in verschiedenen Darstellungen">
+
+    In der folgenden Zelle finden Sie links ein Textfeld und rechts die
+    entsprechende Repräsentation im Binärformat. Ganz auf der rechten Seite
+    sehen Sie noch welche beiden Zeichen gerade im Binärformat dargestellt
+    werden. Sie können hier sehr einfach sehen dass das Binärformat extrem
+    schwierig zu lesen ist.
+
+    Testen Sie die anderen Formate und schauen Sie sich an ob Sie den
+    ASCII-Code wieder erkennen.
+
+    <HexCell />
+
+    Sie können den Text nach belieben ändern, um zu sehen wie die Daten im
+    Computerspeicher aussehen. Arbeiten Sie die folgenden Aufgaben durch:
+
+    1. Finden Sie heraus welchen Wert der Buchstabe `A` in allen Formaten hat.
+    1. Was fällt auf wenn Sie die Buchstaben `A` und `a` im Binär-, Oktal- und
+       Hexadezimalsystem anschauen?
+    1. Was fällt Ihnen auf wenn Sie `abcdef` im Binärformat anschauen?
+    1. Was passiert wenn Sie einen Leerschlag eingeben?
+    1. Was passiert wenn Sie einen Zeilenumbruch eingeben?
+    1. Geben Sie ein kleines Objekt im JSON-format ein. Was können Sie jeweils
+       in den verschiedenen Formaten beobachten?
+
+    </Example>
+
+    <section>
+
+    ### Wieso Binärcode?
+
+    Der Binärcode scheint extrem unübersichtlich zu sein, und somit zu nichts
+    zu gebrauchen, zumindest wenn wir den Binärcode direkt anschauen. Aber es
+    gibt Verwendungszwecke wo wir den Binärcode direkt brauchen, und er sogar
+    *übersichtlicher* ist. Das ist in vor allem in der Verschlüsselung.
+
+    Moderne Verschlüsselungsverfahren verwenden jeweils die XOR-Operation
+    zusammen mit einem Schlüssel. Dann wird jedes `Bit` im Klartext und im
+    Schlüssel mit der XOR-Operation verrechnet, und ergibt dann das `Bit` im
+    Ciphertext. Moderne Verschlüsselungsverfahren verwenden natürlic noch mehr
+    Tricks, aber dies ist ein einfaches Beispiel für die XOR-Operation und
+    wieso dass Binärcode *praktisch* ist.
+
+    </section>
 
 </Chapter>
 
